# pulumi-rs

./: Cargo.toml  README.md  build.rs  scratch
docs/: requirements.md
language-go/: main.go  mod.go
src/: language.rs  lib.rs  main.rs  proto.rs
src/language/: langserver.rs  language.rs  pulumirpc.codegen.rs  pulumirpc.rs
src/proto/: codegen.rs  mod.rs  pulumirpc.rs
src/proto/pulumi/: google.protobuf.rs  pulumirpc.rs
src/pulumi/: resource.rs
