[package]
name = "pulumi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.20"
prost = "0.12.1"
prost-types = "0.12.1"
tonic = "0.10.0"

[build-dependencies]
color-eyre = "0.6.2"
config = "0.13.3"
eyre = "0.6.8"
tonic-build = {version="0.10.0", features=["prost"]}
